--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
             projectId: "perfume-calendar-208d3",
             storageBucket: "perfume-calendar-208d3.firebasestorage.app",
             messagingSenderId: "211756274792",
-            appId: "1:211756274792:web:6a411654cae055885417dd"
+            appId: "1:211756274792:web:6a411654cae055885417dd",
             measurementId: "G-VTGGXTFW7G"
         };
 
