--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
         const firebaseConfig = {
             apiKey: "AIzaSyB_wlzgzbgXRJb39Cbli9MTHMpMqErAj9c",
             authDomain: "perfume-calendar-208d3.firebaseapp.com",
-            databaseURL: "https://perfume-calendar-208d3-default-rtdb.firebaseio.com",
+            databaseURL: "https://perfume-calendar-208d3-default-rtdb.asia-southeast1.firebasedatabase.app",
             projectId: "perfume-calendar-208d3",
             storageBucket: "perfume-calendar-208d3.firebasestorage.app",
             messagingSenderId: "211756274792",
